Actualizacion. 80% terminado. Funciona casi todo lo importante

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -16,3 +16,12 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8090/realm
 
 # OpenAPI
 openapi.server.url=http://localhost:8080
+
+# IdentityClient
+service.id=users-service
+service.secret=mnYHbvQvzO5adwsigjPUKnZBl1oTGe64
+keycloak.url=http://localhost:8090
+keycloak.realm=undersounds
+
+user.pfp-drive=media/users/pfp
+users.max-pfp-size=10485760
