--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/users_service
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
