Actualización del proyecto. Final. Entrega 2 asee.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-server.port=8080
-server.ssl.enabled=false
-
-# Configuración de JPA con MySQL
+spring.application.name=ub-users-service
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka/}
+user.pfp-drive=media/users/pfp
+users.max-pfp-size=10485760
