--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
+server.port=8081
+
 # MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/users_service
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,7 +17,7 @@ spring.security.oauth2.client.registration.keycloak.client-id=users-service
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8090/realms/undersounds
 
 # OpenAPI
-openapi.server.url=http://localhost:8080
+openapi.server.url=http://localhost:8081
 
 # IdentityClient
 service.id=users-service
@@ -25,3 +27,13 @@ keycloak.realm=undersounds
 
 user.pfp-drive=media/users/pfp
 users.max-pfp-size=10485760
+
+# application.properties
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+#Eureka
+spring.application.name=users-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
