--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=undersounds-backend_users-service
+spring.application.name=ub_users-service
 
-spring.profiles.active=dev
+spring.profiles.active=prod
